--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         Ipsum esse eius modi ratione! Tempore modi ipsum in dolorem 
         eligendi nostrum rerum fugiat est deserunt, ad ab veritatis.
          Totam, dolorem nostrum.</p>
+    <div>
+        <h2>Titulo div</h2>
+    </div>
 </body>
 </html>
